        [float]
        ===== Breaking changes

        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x

==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Fixes for run context handling for 'graphql' instrumentation.
  ({issues}2430[#2430])

* Fixes for run context handling for DynamoDB instrumentation ('aws-sdk'
  package) so that a span created after an AWS client command (in the same
  tick, in the command callback, or promise) is not a child of the automatic
  AWS span. This change also ensures captured errors from failing client
  commands are a child of the AWS span. ({issues}2430[#2430])

* Fixes for run context handling for 'pg' instrumentation. ({issues}2430[#2430])


[[release-notes-3.26.0]]
==== 3.26.0 2021/12/07

[float]
===== Breaking changes

* In earlier versions, the agent would propagate run context in some packages
  *even if instrumentation for that package was disabled via
  <<disable-instrumentations, `disableInstrumentations`>>*. Recent versions
  change the semantics of `disableInstrumentations` to mean the agent should
  not touch the listed packages at all. This means that an application that
  uses one of these packages *and* lists that package in
  `disableInstrumentations` could see changes in the async run-context of
  callbacks. This affects: `pg` (v3.24.0), `redis` (v3.25.0), `mysql`
  (v3.25.0), `ioredis` (v3.26.0), `mysql2` (v3.26.0).  See {issues}2498[#2498]
  for details.

[float]
===== Features

* Add `*auth*` pattern to default value for `sanitizeFieldNames` config var, so
  that it is more likely to redact authentication/authorization-related HTTP
  headers and form fields. This pattern replaces the `authorization` pattern