@@ -94,6 +94,9 @@ module.exports = function (graphql, agent, { version, enabled }) {
         span.name = 'GraphQL: ' + (operationName ? operationName + ' ' : '') + queries.join(', ')
       }
 
+      // `_graphqlRoute` is a boolean set in instrumentations of other modules
+      // that specify 'graphql' in peerDependencies (e.g. 'express-graphql') to
+      // indicate that this transaction is for a GraphQL request.
       const trans = span.transaction
       if (trans._graphqlRoute) {
         var name = queries.length > 0 ? queries.join(', ') : 'Unknown GraphQL query'
