@@ -140,7 +140,7 @@
     "dependency-check": "^4.1.0",
     "elasticsearch": "^16.5.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
+    "express-graphql": "^0.12.0",
     "express-queue": "^0.0.12",
     "fastify": "^2.12.0",
     "fastify-formbody": "^3.2",
@@ -148,7 +148,7 @@
     "generic-pool": "^3.7.1",
     "get-port": "^5.1.1",
     "got": "^9.6.0",
-    "graphql": "^15.3.0",
+    "graphql": "^15.8.0",
     "handlebars": "^4.7.3",
     "hapi": "^18.1.0",
     "https-pem": "^2.0.0",
