@@ -9,17 +9,31 @@ var agent = require('../../..').start({
   spanFramesMinDuration: -1 // always capture stack traces with spans
 })
 
+// There is a known issue where express-graphql instrumentation does not work
+// with express-graphql >=0.10.0 and node <10.4.
+// https://github.com/elastic/apm-agent-nodejs/issues/2516
+const expressGraphqlVersion = require('../../../node_modules/express-graphql/package.json').version
+const semver = require('semver')
+if (semver.gte(expressGraphqlVersion, '0.10.0') && semver.lt(process.version, '10.4.0')) {
+  console.log(`# SKIP express-graphql@${expressGraphqlVersion} testing with node <10.4 (${process.version}) because of a known issue`)
+  process.exit()
+}
+
 var http = require('http')
 
 var buildSchema = require('graphql').buildSchema
 var express = require('express')
 var querystring = require('querystring')
-var graphqlHTTP = require('express-graphql')
+var expressGraphql = require('express-graphql')
 var test = require('tape')
 
 var mockClient = require('../../_mock_http_client')
 
 const paths = ['/graphql', '/']
+
+// In express-graphql@0.10.0, `graphqlHTTP` changed from being the top export
+// to an attribute of the export object.
+const graphqlHTTP = expressGraphql.graphqlHTTP || expressGraphql
 
 paths.forEach(function (path) {
   test(`POST ${path}`, function (t) {
